# gtasa-rpc

./: CMakeLists.txt
libs/samemory/: samemory.h  zones.c  zones.h
src/: main.c
